--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "homepage": "https://github.com/SohtR/toxinHotel#readme",
   "devDependencies": {
     "@babel/core": "^7.4.3",
+    "@babel/plugin-proposal-class-properties": "^7.13.0",
     "@babel/preset-env": "^7.4.3",
     "air-datepicker": "^2.2.3",
     "babel-core": "^6.26.3",
