--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
   "scripts": {
     "start": "webpack-dev-server",
     "dev": "del-cli dist && webpack --mode development",
-    "build": "webpack --mode production"
+    "build": "webpack --mode production",
+    "lint": "eslint ./src/",
+    "lintFix": "eslint ./src --fix"
   },
   "repository": {
     "type": "git",
@@ -24,11 +26,17 @@
     "@babel/preset-env": "^7.4.3",
     "air-datepicker": "^2.2.3",
     "babel-core": "^6.26.3",
+    "babel-eslint": "^10.1.0",
     "babel-loader": "^8.0.5",
     "babel-preset-env": "^1.7.0",
     "copy-webpack-plugin": "^5.0.3",
     "css-loader": "^2.1.1",
     "del-cli": "^1.1.0",
+    "eslint": "^7.27.0",
+    "eslint-config-airbnb": "^18.2.1",
+    "eslint-config-airbnb-base": "^14.2.1",
+    "eslint-plugin-fsd": "^1.0.1",
+    "eslint-plugin-import": "^2.23.4",
     "extract-text-webpack-plugin": "^3.0.2",
     "file-loader": "^3.0.1",
     "html-webpack-plugin": "^3.2.0",
