--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "pug-loader": "^2.4.0",
     "sass": "^1.34.1",
     "sass-loader": "^10.2.0",
+    "slick-carousel": "^1.8.1",
     "style-loader": "^1.2.1",
     "webpack": "^4.46.0",
     "webpack-cli": "^3.3.7",
