--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "html-webpack-plugin": "^3.2.0",
     "image-webpack-loader": "^4.6.0",
     "jquery": "^3.4.1",
+    "jquery-ui": "^1.12.1",
     "mini-css-extract-plugin": "^0.6.0",
     "node-sass": "^4.13.0",
     "postcss": "^8.3.0",
