--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "file-loader": "^3.0.1",
     "html-webpack-plugin": "^3.2.0",
     "image-webpack-loader": "^4.6.0",
+    "inputmask": "^5.0.6",
     "jquery": "^3.4.1",
     "jquery-ui": "^1.12.1",
     "mini-css-extract-plugin": "^0.6.0",
