--- a/package.json
+++ b/package.json
@@ -10,16 +10,7 @@
     "lint": "eslint ./src/",
     "lintFix": "eslint ./src --fix"
   },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/SohtR/toxinHotel.git"
-  },
-  "author": "",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/SohtR/toxinHotel/issues"
-  },
-  "homepage": "https://github.com/SohtR/toxinHotel#readme",
+
   "devDependencies": {
     "@babel/core": "^7.4.3",
     "@babel/plugin-proposal-class-properties": "^7.13.0",
@@ -30,6 +21,7 @@
     "babel-eslint": "^10.1.0",
     "babel-loader": "^8.0.5",
     "babel-preset-env": "^1.7.0",
+    "clean-webpack-plugin": "^4.0.0-alpha.0",
     "copy-webpack-plugin": "^5.0.3",
     "css-loader": "^2.1.1",
     "del-cli": "^1.1.0",
